--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-skipped">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse--1584764814\testng-customsuite.xml</span>
+                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-908142614\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">4 methods,  1 skipped,  3 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods skipped suite-Default_suite"> (hide)</a> <!-- hide-methods skipped suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods skipped suite-Default_suite"> (show)</a> <!-- show-methods skipped suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content skipped suite-Default_suite">
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest2">NGTest2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,11 +117,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest1">NGTest1</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest2">NGTest2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -132,6 +141,50 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="NGTest2">
+                  </a> <!-- NGTest2 -->
+                  <span class="method-name">NGTest2</span>
+                  <div class="stack-trace">org.testng.SkipException: NGTest2 skipped
+	at kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass.NGTest2(JenkinsIntegrationTestNGClass.java:51)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
+	at org.testng.TestNG.runSuites(TestNG.java:1049)
+	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-skipped -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -143,13 +196,6 @@
                   <a name="NGTest1">
                   </a> <!-- NGTest1 -->
                   <span class="method-name">NGTest1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="NGTest2">
-                  </a> <!-- NGTest2 -->
-                  <span class="method-name">NGTest2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -171,7 +217,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse--1584764814\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-908142614\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -224,15 +270,15 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NGTest1')
 data.setCell(0, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(0, 3, 13);
+data.setCell(0, 3, 10);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'NGTest3')
+data.setCell(1, 1, 'NGTest2')
 data.setCell(1, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(1, 3, 3);
+data.setCell(1, 3, 8);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'NGTest2')
+data.setCell(2, 1, 'NGTest3')
 data.setCell(2, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(2, 3, 3);
+data.setCell(2, 3, 2);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'NGTest4')
 data.setCell(3, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
@@ -241,7 +287,7 @@ window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 ms</span>
+              <span class="suite-total-time">Total running time: 22 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -274,39 +320,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NGTest1</span>
-                <span class="method-start">14788 ms</span>
+                <span class="method-start">14322 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest1 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest1()[pri:0, instan...)</span>
-                <span class="method-start">14803 ms</span>
+                <span class="method-start">14334 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest2</span>
-                <span class="method-start">14811 ms</span>
+                <span class="method-start">14341 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">AfterMethod([TestResult name=NGTest2 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest2()[pri:0, instan...)</span>
-                <span class="method-start">14816 ms</span>
+                <span class="method-name">AfterMethod([TestResult name=NGTest2 status=SKIP method=JenkinsIntegrationTestNGClass.NGTest2()[pri:0, instance:...)</span>
+                <span class="method-start">14350 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest3</span>
-                <span class="method-start">14817 ms</span>
+                <span class="method-start">14351 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest3 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest3()[pri:0, instan...)</span>
-                <span class="method-start">14821 ms</span>
+                <span class="method-start">14357 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest4</span>
-                <span class="method-start">14822 ms</span>
+                <span class="method-start">14358 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest4 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest4()[pri:0, instan...)</span>
-                <span class="method-start">14827 ms</span>
+                <span class="method-start">14361 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">AfterTest</span>
-                <span class="method-start">14830 ms</span>
+                <span class="method-start">14364 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
