--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-448523612\testng-customsuite.xml</span>
+                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-988163210\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,  1 skipped,  3 passed</span>
+                    <span class="method-stats">5 methods,  1 skipped,  4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title skipped">Skipped methods</span>
@@ -127,6 +127,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest4">NGTest4</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest5">NGTest5</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -212,12 +217,19 @@
                   <span class="method-name">NGTest4</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="NGTest5">
+                  </a> <!-- NGTest5 -->
+                  <span class="method-name">NGTest5</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-448523612\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-988163210\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -266,28 +278,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NGTest1')
 data.setCell(0, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(0, 3, 12);
+data.setCell(0, 3, 13);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'NGTest2')
 data.setCell(1, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(1, 3, 11);
+data.setCell(1, 3, 8);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'NGTest3')
+data.setCell(2, 1, 'NGTest5')
 data.setCell(2, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(2, 3, 4);
+data.setCell(2, 3, 3);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'NGTest4')
 data.setCell(3, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
 data.setCell(3, 3, 2);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'NGTest3')
+data.setCell(4, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
+data.setCell(4, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 ms</span>
+              <span class="suite-total-time">Total running time: 27 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -320,39 +336,47 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NGTest1</span>
-                <span class="method-start">28336 ms</span>
+                <span class="method-start">52378 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest1 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest1()[pri:0, instan...)</span>
-                <span class="method-start">28350 ms</span>
+                <span class="method-start">52394 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest2</span>
-                <span class="method-start">28354 ms</span>
+                <span class="method-start">52402 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest2 status=SKIP method=JenkinsIntegrationTestNGClass.NGTest2()[pri:0, instance:...)</span>
-                <span class="method-start">28366 ms</span>
+                <span class="method-start">52412 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest3</span>
-                <span class="method-start">28367 ms</span>
+                <span class="method-start">52414 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest3 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest3()[pri:0, instan...)</span>
-                <span class="method-start">28373 ms</span>
+                <span class="method-start">52417 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest4</span>
-                <span class="method-start">28374 ms</span>
+                <span class="method-start">52418 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest4 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest4()[pri:0, instan...)</span>
-                <span class="method-start">28378 ms</span>
+                <span class="method-start">52422 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">NGTest5</span>
+                <span class="method-start">52423 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">AfterMethod([TestResult name=NGTest5 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest5()[pri:0, instan...)</span>
+                <span class="method-start">52428 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">AfterTest</span>
-                <span class="method-start">28382 ms</span>
+                <span class="method-start">52435 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
