--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num attn">1</td><td class="num">0</td><td class="num">53,791</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">1</td><td class="num">28,884</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</td><td><a href="#m0">NGTest2</a></td><td rowspan="1">1560258317242</td><td rowspan="1">8</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</td><td><a href="#m1">NGTest1</a></td><td rowspan="1">1560258317218</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m2">NGTest3</a></td><td rowspan="1">1560258317254</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">NGTest4</a></td><td rowspan="1">1560258317258</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">NGTest5</a></td><td rowspan="1">1560258317263</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</td><td><a href="#m0">NGTest2</a></td><td rowspan="1">1560260065694</td><td rowspan="1">2</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</td><td><a href="#m1">NGTest1</a></td><td rowspan="1">1560260065678</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m2">NGTest3</a></td><td rowspan="1">1560260066387</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">NGTest4</a></td><td rowspan="1">1560260066391</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">NGTest5</a></td><td rowspan="1">1560260066406</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass#NGTest2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: NGTest2 skipped
-	at kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass.NGTest2(JenkinsIntegrationTestNGClass.java:51)
+<h2>Default test</h2><h3 id="m0">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass#NGTest2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
+	at org.testng.Assert.fail(Assert.java:96)
+	at org.testng.Assert.fail(Assert.java:103)
+	at kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass.NGTest2(JenkinsIntegrationTestNGClass.java:49)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
