--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-skipped">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-988163210\testng-customsuite.xml</span>
+                    <span>C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-1654303119\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,  1 skipped,  4 passed</span>
+                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods skipped suite-Default_suite"> (hide)</a> <!-- hide-methods skipped suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods skipped suite-Default_suite"> (show)</a> <!-- show-methods skipped suite-Default_suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content skipped suite-Default_suite">
+                    <div class="method-list-content failed suite-Default_suite">
                       <span>
-                        <img width="3%" src="skipped.png"/>
+                        <img width="3%" src="failed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass" hash-for-method="NGTest2">NGTest2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-Default_suite -->
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -146,9 +146,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-skipped">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
+              <img src="failed.png"/>
               <span class="class-name">kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -157,8 +157,10 @@
                   <a name="NGTest2">
                   </a> <!-- NGTest2 -->
                   <span class="method-name">NGTest2</span>
-                  <div class="stack-trace">org.testng.SkipException: NGTest2 skipped
-	at kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass.NGTest2(JenkinsIntegrationTestNGClass.java:51)
+                  <div class="stack-trace">java.lang.AssertionError: null
+	at org.testng.Assert.fail(Assert.java:96)
+	at org.testng.Assert.fail(Assert.java:103)
+	at kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass.NGTest2(JenkinsIntegrationTestNGClass.java:49)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -189,7 +191,7 @@
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-skipped -->
+          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -229,7 +231,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-988163210\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\prasenjitd.IN\AppData\Local\Temp\testng-eclipse-1654303119\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -282,28 +284,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NGTest1')
 data.setCell(0, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(0, 3, 13);
+data.setCell(0, 3, 10);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'NGTest2')
+data.setCell(1, 1, 'NGTest4')
 data.setCell(1, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(1, 3, 8);
+data.setCell(1, 3, 2);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'NGTest5')
+data.setCell(2, 1, 'NGTest3')
 data.setCell(2, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
-data.setCell(2, 3, 3);
+data.setCell(2, 3, 2);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'NGTest4')
+data.setCell(3, 1, 'NGTest2')
 data.setCell(3, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
 data.setCell(3, 3, 2);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'NGTest3')
+data.setCell(4, 1, 'NGTest5')
 data.setCell(4, 2, 'kovair.JenkinsIntegration1.JenkinsIntegrationTestNGClass')
 data.setCell(4, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 ms</span>
+              <span class="suite-total-time">Total running time: 17 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -336,47 +338,49 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NGTest1</span>
-                <span class="method-start">52378 ms</span>
+                <span class="method-start">26860 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest1 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest1()[pri:0, instan...)</span>
-                <span class="method-start">52394 ms</span>
+                <span class="method-start">26873 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">NGTest2</span>
-                <span class="method-start">52402 ms</span>
+                <span class="method-start">26876 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">AfterMethod([TestResult name=NGTest2 status=SKIP method=JenkinsIntegrationTestNGClass.NGTest2()[pri:0, instance:...)</span>
-                <span class="method-start">52412 ms</span>
+                <span class="method-name">AfterMethod([TestResult name=NGTest2 status=FAILURE method=JenkinsIntegrationTestNGClass.NGTest2()[pri:0, instan...)</span>
+                <span class="method-start">26955 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest3</span>
-                <span class="method-start">52414 ms</span>
+                <span class="method-start">27569 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest3 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest3()[pri:0, instan...)</span>
-                <span class="method-start">52417 ms</span>
+                <span class="method-start">27572 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest4</span>
-                <span class="method-start">52418 ms</span>
+                <span class="method-start">27573 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest4 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest4()[pri:0, instan...)</span>
-                <span class="method-start">52422 ms</span>
+                <span class="method-start">27577 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">NGTest5</span>
-                <span class="method-start">52423 ms</span>
+                <span class="method-start">27588 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterMethod([TestResult name=NGTest5 status=SUCCESS method=JenkinsIntegrationTestNGClass.NGTest5()[pri:0, instan...)</span>
-                <span class="method-start">52428 ms</span>
+                <span class="method-start">27591 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">AfterTest</span>
-                <span class="method-start">52435 ms</span>
+                <span class="method-start">27598 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
