--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,2 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td><a href='D:\PrasenjitOffice\OneDrive - Kovair Software\My Kovair Files\EclipseWorkspace\JenkinsIntegration1\src\test\java\scrpackage\NGTest2710.png'> <img src='D:\PrasenjitOffice\OneDrive - Kovair Software\My Kovair Files\EclipseWorkspace\JenkinsIntegration1\src\test\java\scrpackage\NGTest2710.png' height='100' width='100'/> </a></td></tr>
+</table>
